# momake

./: .gitignore  README.md  poc.py  pyproject.toml
logan/: dependency.py  finder.py  runner.py  task.py
logan/runlog/: commands.py  conn.py  db.py  queries.py  tables.py
momake/: dependency.py  exceptions.py  finder.py  runner.py  task.py
momake/runlog/: commands.py  conn.py  queries.py  tables.py
