[project]
name = "momake"
version = "0.1.0"
description = ""
authors = [
    {name = "Dominik Dlugajczyk",email = "msocek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "click (>=8.1.8,<9.0.0)"
]

[project.scripts]
momake = "momake.runner:cmd"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 99
known_first_party = [ "momake" ]
multi_line_output = 3
sections = [ "FUTURE", "STDLIB", "OTHER", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_single_line = true
default_section = "OTHER"

[tool.black]
line_length = 99
target-version = [ "py38" ]
ignore = [ "W503", "W504" ]
